Reorganize unit tests by component